<resources>
    <string name="app_name" translatable="false">PepegaFood</string>

    <string name="nav_home">Home</string>
    <string name="nav_catalog">Catalog</string>
    <string name="nav_basket">Basket</string>
    <string name="nav_delivery">Delivery</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_address">Select address</string>
    <string name="nav_search">Search</string>

    <string name="home_your_address">Your address</string>

    <string name="address_loading">Address detection…</string>
    <string name="address_error">Address detection error</string>
    <string name="address_not_set">Address not set</string>
    <string name="map_marker_position">The marker\'s current position</string>
    <string name="address_selected_address">Selected address</string>

    <string name="search_hint">Enter the product name.</string>
    <string name="home_search_button">Search button</string>
    <string name="home_collect_food_basket">Collect food basket</string>
    <string name="home_look_basket">Look</string>
    <string name="home_automatic_collection">Automatic collection</string>
    <string name="home_favorite_baskets">Favorite baskets</string>
    <string name="home_catalog">Catalog</string>

    <string name="login_title">Login in PepegaFood</string>
    <string name="login_phone">Phone</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_registration">Registration</string>
    <string name="login_logo">Logo of PepegaFood</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_first_name">Person name</string>
    <string name="login_confirm_password">Confirm password</string>
    <string name="login_sign_out">Sign_out</string>
    <string name="login_first_name_placeholder">Sergey</string>
    <string name="login_password_placeholder" translatable="false">********</string>
    <string name="login_email_invalid">Invalid mail format</string>
    <string name="login_password_invalid">Password less than 6 characters</string>
    <string name="login_first_name_invalid">User name is empty</string>
    <string name="login_phone_invalid">Incorrect format of phone</string>
    <string name="login_confirm_password_invalid">Passwords don\'t match</string>
    <string name="login_last_name">Last name</string>
    <string name="login_last_name_placeholder">Alekseev</string>
    <string name="login_last_name_invalid">Last name is empty</string>
    <string name="login_success_registration">Success registration</string>
    <string name="login_success_registration_msg">Registered successfully, please login!</string>
    <string name="profile_edit_helper">Click here to edit profile</string>

    <string name="profile_logout">Logout</string>
    <string name="profile_about_application">About application</string>
    <string name="profile_address">Delivery address</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_personal_information">Personal information</string>
    <string name="profile_log_in">Log in to your account</string>
    <string name="profile_log_in_helper">Click here to log in</string>
    <string name="profile_action">Profile action</string>

    <string name="basket_basket_image">Basket image</string>
    <string name="bucket_is_empty">The bucket is empty</string>
    <string name="basket_try_to_find_something">Try to find something</string>
    <string name="button_in_the_catalog">in the catalog</string>
    <string name="basket_place_your_order">Place your order</string>
    <string name="basket_product_list">Product list</string>
    <string name="basket_forever_baskets">Forever baskets</string>
    <string name="basket_open_button">Open button</string>
    <string name="basket_subtotal">Subtotal:</string>
    <string name="basket_remove_all">Remove all</string>
    <string name="basket_product_image">Basket product image</string>

    <string name="catalog_select">Select a product category</string>

    <string name="search">Search</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>

</resources>