<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vereshchagin.nikolay.pepegafood.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_catalog"
        android:name="com.vereshchagin.nikolay.pepegafood.catalog.CatalogFragment"
        android:label="@string/nav_catalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/nav_basket"
        android:name="com.vereshchagin.nikolay.pepegafood.basket.BasketFragment"
        android:label="@string/nav_basket"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.vereshchagin.nikolay.pepegafood.map.MapFragment"
        android:label="@string/nav_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.vereshchagin.nikolay.pepegafood.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>