<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".profile.ProfileFragment">

        <androidx.cardview.widget.CardView
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp">

            <RelativeLayout
                android:id="@+id/profile_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_layout_padding"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true" >

                <TextView
                    android:id="@+id/profile_name"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:text="@string/profile_log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@id/profile_action"/>

                <TextView
                    android:text="@string/profile_log_in_helper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/profile_name"/>

                <ImageView
                    android:id="@+id/profile_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_common_edit"
                    android:contentDescription="@string/profile_action" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:text="@string/profile_personal_information"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_title_padding"
            android:layout_margin="@dimen/default_layout_padding"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <androidx.cardview.widget.CardView
                style="@style/CardStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/default_layout_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/profile_card_padding">

                    <TextView
                        android:text="@string/profile_phone"
                        android:textColor="?android:attr/textColorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="(999) 888-77-66"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/CardStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/default_layout_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/profile_card_padding">

                    <TextView
                        android:text="@string/profile_email"
                        android:textColor="?android:attr/textColorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="example@mail.com"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_layout_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/profile_card_padding">

                <TextView
                    android:text="@string/profile_address"
                    android:textColor="?android:attr/textColorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="ул.Пушкина, 23" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <androidx.cardview.widget.CardView
            style="@style/CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_layout_padding">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:text="@string/profile_about_application"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/profile_card_padding"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:focusable="true"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>

