<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context=".home.HomeFragment">

    <androidx.cardview.widget.CardView
        style="@style/CardStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_layout_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/home_search_hint"
                android:inputType="textFilter"
                android:padding="12dp"
                android:importantForAutofill="no"
                android:imeOptions="actionSearch" />

            <ImageButton
                android:id="@+id/search_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:padding="12dp"
                android:contentDescription="@string/home_search_button"
                android:src="@drawable/ic_search" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:text="@string/home_automatic_collection"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:layout_margin="@dimen/default_layout_padding" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_auto_baskets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_shopping_basket"
        tools:itemCount="3"/>

    <TextView
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:text="@string/home_favorite_baskets"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:layout_margin="@dimen/default_layout_padding" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_favorite_basket"
        tools:itemCount="3"/>

    <TextView
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:text="@string/home_catalog"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:layout_margin="@dimen/default_layout_padding" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_catalog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/item_catalog"
        tools:itemCount="4"/>

</LinearLayout>